--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=spring_boot_rest
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_kata?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/db_kata
 spring.datasource.username=root
 spring.datasource.password=root1111
 
